--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -44,15 +44,9 @@
     "\n",
     "#### (READ THIRD) Solving Einstein's Equations in Curvilinear Coordinates\n",
     "+ #### Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
-    "+ #### In progress: [Computing the Weyl $\\psi_4$ Scalar in Cartesian Coordinates](Tutorial-WeylScalars-Cartesian.ipynb) (*Courtesy Patrick Nelson*)"
+    "+ #### In progress: [Computing the Weyl Scalars and Invariants in Cartesian Coordinates](Tutorial-WeylScalars-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
+    "    + #### In progress: [WeylScal4NRPy: An Introduction to Einstein Toolkit Diagnostic Thorns](Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb) (*Courtesy Patrick Nelson*)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
