--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -32,26 +32,26 @@
     "\n",
     "## Interactive NRPy+ Jupyter Notebook Tutorials\n",
     "#### (READ FIRST, IN ORDER) Basic functionality of NRPy+; Scalar Wave Equation in Cartesian Coordinates\n",
-    "+ #### [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
-    "+ #### [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
-    "+ #### [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
-    "+ #### [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
-    "    + #### Instructional module: [How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
-    "    + #### Start-to-Finish Example: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
-    "+ #### Application: [The Scalar Wave Equation in Cartesian Coordinates, with Plane-Wave Initial Data](Tutorial-ScalarWave.ipynb)\n",
-    "    + #### In progress: Solving the Wave Equation with the Einstein Toolkit (*Courtesy Patrick Nelson*)\n",
+    "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
+    "+ [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
+    "+ [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
+    "+ [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
+    "    + Instructional module: [How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
+    "    + Start-to-Finish Example: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
+    "+ Application: [The Scalar Wave Equation in Cartesian Coordinates, with Plane-Wave Initial Data](Tutorial-ScalarWave.ipynb)\n",
+    "    + **In progress**: Solving the Wave Equation with the Einstein Toolkit (*Courtesy Patrick Nelson*)\n",
     "        + [**IDScalarWaveNRPy**: Plane-wave initial data module for the scalar wave equation](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb) \n",
     "        + [**WaveToyNRPy**: Solving the scalar wave equation, using the method of lines](Tutorial-ETK_thorn-WaveToyNRPy.ipynb)\n",
     "\n",
     "#### (READ SECOND, IN ORDER) Reference Metrics and the Scalar Wave Equation in Curvilinear Coordinates\n",
-    "+ #### [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
-    "+ #### Application: [The Scalar Wave Equation in Curvilinear Coordinates, using a Reference Metric](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
-    "+ #### Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
+    "+ [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
+    "+ Application: [The Scalar Wave Equation in Curvilinear Coordinates, using a Reference Metric](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
+    "+ Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
     "\n",
     "#### (READ THIRD) Solving Einstein's Equations in Curvilinear Coordinates\n",
-    "+ #### Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
-    "+ #### In progress: [Computing the Weyl Scalars and Invariants in Cartesian Coordinates](Tutorial-WeylScalars-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
-    "    + #### In progress: [WeylScal4NRPy: An Introduction to Einstein Toolkit Diagnostic Thorns](Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb) (*Courtesy Patrick Nelson*)"
+    "+ Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
+    "+ **In progress**: [Computing the Weyl Scalars and Invariants in Cartesian Coordinates](Tutorial-WeylScalars-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
+    "    + **In progress**: [WeylScal4NRPy: An Introduction to Einstein Toolkit Diagnostic Thorns](Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb) (*Courtesy Patrick Nelson*)"
    ]
   }
  ],
