--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -6,27 +6,28 @@
    "source": [
     "# Weyl Scalars and Invariants: An Introduction to Einstein Toolkit Diagnostic Thorns\n",
     "\n",
-    "### Now that we have constructed SymPy expressions for all of the Weyl scalars and associated invariants, let's work through the steps necessary to both generate the C code expressions as well as the calling C code and surrounding Einstein Toolkit infrastructure (e.g., the .ccl files).\n",
-    "\n",
-    "Einstein Toolkit thorns (modules) typically require three \"ccl\" files:\n",
-    "\n",
-    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
-    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
-    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
-    "\n",
-    "Let's start with $\\text{interface.ccl}$. Technical information about what must/should be included in this file can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
-    "\n",
-    "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables that exist within those functions. Then, we tell the toolkit that we want the scalars $\\text{psi4r}$\n",
-    "and $\\text{psi4i}$ to be visible to other thorns by using the keyword \"public\". "
+    "### NRPy+ Source Code for this module:  [WeylScal4NRPy/WeylScalars_Cartesian.py](../edit/WeylScal4NRPy/WeylScalars_Cartesian.py) and [WeylScal4NRPy/WeylScalarInvariants_Cartesian.py](../edit/WeylScal4NRPy/WeylScalarInvariants_Cartesian.py) , which are fully documented in the [previous NRPy+ tutorial module on using NRPy+ to construct the Weyl scalars and invariants as SymPy expressions](Tutorial-WeylScalars-Cartesian.ipynb)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have built the full form of both the real and imaginary components of all five Weyl scalars, we can use NRPy+ to generate C code that compute them. We will later show how this C code can be used to construct a complete Einstein Toolkit diagnostic thorn.\n",
+    "In the [previous tutorial module](Tutorial-WeylScalars-Cartesian.ipynb), we constructed the within SymPy full expressions for the real and imaginary components of all five Weyl scalars $\\psi_0$, $\\psi_1$, $\\psi_2$, $\\psi_3$, and $\\psi_4$ as well as the Weyl invariants. So that we can easily access these expressions, we have ported the Python code needed to generate the Weyl scalar SymPy expressions to [WeylScal4NRPy/WeylScalars_Cartesian.py](../edit/WeylScal4NRPy/WeylScalars_Cartesian.py), and the Weyl invariant SymPy expressions to [WeylScal4NRPy/WeylScalarInvariants_Cartesian.py](../edit/WeylScal4NRPy/WeylScalarInvariants_Cartesian.py).\n",
     "\n",
-    "We first need to output the NRPy+-generated C code to a $\\text{.h}$ file so that they can be used by the C code."
+    "Here we will work through the steps necessary to construct an Einstein Toolkit diagnostic thorn (module), starting from these SymPy expressions, which computes these expressions using ADMBase gridfunctions as input. This tutorial is in two steps:\n",
+    "\n",
+    "1. Call on NRPy+ to convert the SymPy expressions for the Weyl Scalars and associated Invariants into one C-code kernel for each.\n",
+    "1. Write the C code and build up the needed Einstein Toolkit infrastructure (i.e., the .ccl files)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Call on NRPy+ to convert the SymPy expressions for the Weyl scalars and associated invariants into one C-code kernel for each. \n",
+    "\n",
+    "### WARNING: It takes some time to generate the CSE-optimized C code kernels for these quantities, especially the Weyl scalars... expect 5 minutes on a modern computer."
    ]
   },
   {
@@ -38,7 +39,6 @@
     "import indexedexp as ixp\n",
     "import grid as gri\n",
     "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
     "from outputC import *\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
@@ -107,7 +107,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have generated the .h files that do the heavy lifting in calculating the scalars we want to find, we need to write the C code that will do the legwork in getting the .h files run by the Toolkit. After the include statements, we give the function definitions to calculate both the Weyl scalars and invariants."
+    "## Step 2: Interfacing with the Einstein Toolkit\n",
+    "\n",
+    "### Step 2a: Constructing the Einstein Toolkit calling functions that include the C code kernels.\n",
+    "\n",
+    "Now that we have generated the C code kernels (*WeylScal4NRPy_psis.h* and *WeylScal4NRPy_invars.h*) express the Weyl scalars and invariants as CSE-optimized finite-difference expressions, we next need to write the C code functions that incorporate these kernels and are called by the Einstein Toolkit scheduler."
    ]
   },
   {
@@ -211,9 +215,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create an Einstein Toolkit thorn to numerically compare the two codes, we will need a few more files, as required by the Einstein Toolkit: the scheduling, parameter, and interface $\\text{.ccl files}$ (our specific thorn does not require the optional $\\text{configuration.ccl}$ file)\n",
+    "### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
     "\n",
-    "We will start with the file $\\text{interface.ccl}$. This file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
+    "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
+    "\n",
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
+    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
+    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
+    "\n",
+    "Let's start with $\\text{interface.ccl}$. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an interface.ccl file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
+    "\n",
     "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables that exist within those functions. Then, we tell the toolkit that we want the scalars $\\text{psi4r}$\n",
     "and $\\text{psi4i}$ to be visible to other thorns by using the keyword \"public\". "
    ]
@@ -261,7 +272,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now write the file $\\text{param.ccl}$. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). Here, the first two parameters tell the Method of Lines thorn that none of our variables need to be evolved in time. The last two determine how often we will calculate $\\psi_4$ and how many timesteps to skip at the beginning; currently, they are set to calculate $\\psi_4$ at every timestep, starting from the first in the simulation. "
+    "We will now write the file $\\text{param.ccl}$. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). \n",
+    "\n",
+    "The first parameter specifies how many time levels need to be stored. Generally when using the ETK's adaptive-mesh refinement (AMR) driver [Carpet](https://carpetcode.org/), three timelevels are needed so that the diagnostic quantities can be properly interpolated and defined across refinement boundaries. \n",
+    "\n",
+    "The second parameter determines how often we will calculate $\\psi_4$, and the third parameter indicates whether just $\\psi_4$, all Weyl scalars, or all Weyl scalars and invariants are going to be output. The third parameter is currently specified entirely within NRPy+, so by this point it is *not* a free parameter. Thus it is not quite correct to include it in this list of *free* parameters (FIXME)."
    ]
   },
   {
@@ -305,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we will write the file $\\text{schedule.ccl}$; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). This file dictates when the various parts of the thorn will be run. We first assign storage for both the real and imaginary components of $\\psi_4$, and then specify that we want our code run in  the $\\text{MoL_PseudoEvolution}$ schedule group, after the ADM variables are set. At this step, we declare that we will be writing code in C. We also specify the gridfunctions that we wish to read in from memory--in our case, we need all the components of $K_{ij}$ and $g_{ij}$ (which we have been calling $\\gamma_{ij}$) in addition to the coordinate values."
+    "Finally, we will write the file $\\text{schedule.ccl}$; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). This file dictates when the various parts of the thorn will be run. We first assign storage for both the real and imaginary components of $\\psi_4$, and then specify that we want our code run in  the $\\text{MoL_PseudoEvolution}$ schedule group (consistent with the original $\\text{WeylScal4}$ Einstein Toolkit thorn), after the ADM variables are set. At this step, we declare that we will be writing code in C. We also specify the gridfunctions that we wish to read in from memory--in our case, we need all the components of $K_{ij}$ (the spatial extrinsic curvature) and $\\gamma_{ij}$ (the physical [as opposed to conformal] 3-metric), in addition to the coordinate values. Note that the ETK adopts the widely-used convention that components of $\\gamma_{ij}$ are prefixed in the code with $\\text{g}$ and not $\\gamma$."
    ]
   },
   {
@@ -379,33 +394,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#if (CCTK_EQUALS(output_all_psis,\"true\"))\n",
-    "#{\n",
-    "#    {\n",
-    "#  } /*\"Allocate storage for the other psis if desired\"*/\n",
-    "#    if (CCTK_EQUALS(output_invars,\"true\"))\n",
-    "#    {\n",
-    "#        {\n",
-    "#        } /*\"Allocate storage for scalar invariants if desired\"*/\n",
-    "#    }\n",
-    "#}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will also need $\\text{make.code.defn}$, which states which files need to be compiled. This thorn only has the one C file to compile."
+    "### Step 2c: Tell the Einstein Toolkit to compile the C code.\n",
+    "\n",
+    "The $\\text{make.code.defn}$ lists the source files that need to be compiled. Naturally, this thorn has only the one C file $-$ written above $-$ to compile:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -420,6 +419,26 @@
     "%%writefile WeylScal4NRPy/src/make.code.defn\n",
     "\n",
     "SRCS = WeylScal4NRPy.c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extra junk, ignore for now.\n",
+    "\n",
+    "#if (CCTK_EQUALS(output_all_psis,\"true\"))\n",
+    "#{\n",
+    "#    {\n",
+    "#  } /*\"Allocate storage for the other psis if desired\"*/\n",
+    "#    if (CCTK_EQUALS(output_invars,\"true\"))\n",
+    "#    {\n",
+    "#        {\n",
+    "#        } /*\"Allocate storage for scalar invariants if desired\"*/\n",
+    "#    }\n",
+    "#}"
    ]
   }
  ],
